--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,15 +8,18 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
 
       #- title: "Talks"
       #url: /talks/    
 
+  - title: "Research"
+    url: /research/
+  
   - title: "Teaching"
     url: /teaching/    
 
+  - title: "Publications"
+    url: /publications/
 
       # - title: "Portfolio"
       # url: /portfolio/
@@ -24,8 +27,8 @@ main:
       # - title: "Blog Posts"
       # url: /year-archive/
     
-      # - title: "CV"
-      # url: /cv/
+  - title: "CV"
+    url: /files/resume.pdf
     
   # - title: "CV"
   #   url: /cv-json/
